k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tailwind-a11y-service
spec:
  selector:
    app: tailwind-a11y
  ports:
    - port: 80
      targetPort: 80
