k8s-manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tailwind-a11y-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tailwind-a11y.omurice.dev`) || Host(`tailwind-a11y.k3s.omurice.dev`)
      services:
        - kind: Service
          name: tailwind-a11y-service
          port: 80
